--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="sb-form">
       <form class="h-100">
         <div class="form-group m-0" style="height: 20%; border: 1px solid">
-          <span>123</span>
+          <input class="form-control" type="text">
         </div>
         <div class="form-group m-0" style="height: 20%; border: 1px solid">
           <span>234</span>
