--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -5,11 +5,15 @@
         <div class="form-group m-0" style="height: 20%; border: 1px solid">
           <input class="form-control" type="text">
         </div>
-        <div class="form-group m-0" style="height: 20%; border: 1px solid">
-          <span>234</span>
-        </div>
-        <div class="form-group m-0" style="height: 20%; border: 1px solid">
-          <span>345</span>
+        <div class="form-group m-0" style="height: 40%; border: 1px solid">
+          <div>innerWidth: {{innerWidth | async}}</div>
+          <div>innerHeight: {{innerHeight | async}}</div>
+          <div>screenWidth: {{screenWidth | async}}</div>
+          <div>screenHeight: {{screenHeight | async}}</div>
+          <div>availWidth: {{availWidth | async}}</div>
+          <div>availHeight: {{availHeight | async}}</div>
+          <div>outerHeight: {{outerHeight | async}}</div>
+          <div>outerWidth: {{outerWidth | async}}</div>
         </div>
         <div class="form-group m-0" style="height: 20%; border: 1px solid">
           <span>456</span>
