--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -14,6 +14,7 @@
           <div>availHeight: {{availHeight | async}}</div>
           <div>outerHeight: {{outerHeight | async}}</div>
           <div>outerWidth: {{outerWidth | async}}</div>
+          <div>documentHeight: {{documentHeight | async}}</div>
         </div>
         <div class="form-group m-0" style="height: 20%; border: 1px solid">
           <span>456</span>
