--- a/src/app/view/home/home.component.scss
+++ b/src/app/view/home/home.component.scss
@@ -37,5 +37,10 @@
   @media only screen and (orientation: landscape) {
     background-color: #cfcfcf;
   }
+
+  .bs-background-form-mobile {
+    left: 0 !important;
+    width: 100% !important;
+  }
 }
 
