--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -33,7 +33,9 @@
       <div class="w-100"
            style="position: relative; height: 14%">
         <div class="text-center w-100" style="position: absolute; bottom: 0">
-          <img alt="" style="height: 8.5vh"
+          <img alt=""
+               [ngStyle]="(heightCustom | async) ? {'height': (heightCustom | async) * 8.5 / 100 + 'px'} : null"
+               style="height: 8.5vh"
                src="assets/media/books/1.png">
         </div>
       </div>
@@ -41,10 +43,15 @@
       <div class="w-100"
            style="color: #ffffff; position: relative; height: 16%">
         <div class="text-center"
-             style="position: absolute; bottom: 0; line-height: 3.5vh !important;">
-			<span style="font-size: 2.4vh !important;"> CHÀO MỪNG QUÝ KHÁCH ĐẾN VỚI DỊCH VỤ NGÂN HÀNG TRỰC TUYẾN
+             style="position: absolute; bottom: 0; line-height: 3.5vh;">
+			<span
+        [ngStyle]="(heightCustom | async) ? {'font-size': (heightCustom | async) * 2.4 / 100 + 'px'} : null"
+        style="font-size: 2.4vh;">
+        CHÀO MỪNG QUÝ KHÁCH ĐẾN VỚI DỊCH VỤ NGÂN HÀNG TRỰC TUYẾN
 				<a><img class="sb-cursor-pointer"
-                style="height: 2.5vh !important; padding-bottom: 0.67vh; width: 10%"
+                [ngStyle]="(heightCustom | async) ? {'font-size': (heightCustom | async) * 2.5 / 100 + 'px'
+                , 'padding-bottom': (heightCustom | async) * 0.67 / 100 + 'px'} : null"
+                style="height: 2.5vh; padding-bottom: 0.67vh; width: 10%"
                 src="assets/media/books/1.png" alt="logo-seanet">
 				</a> CỦA SEABANK
 			</span>
@@ -55,18 +62,28 @@
 
       </div>
       <div class="w-100 text-right"
+           [ngStyle]="(heightCustom | async) ? {'height': (heightCustom | async) * 5 / 100 + 'px'} : null"
            style="height: 5vh">
 		<span class="sb-login-lang" style="cursor: pointer; margin-right: 2vh">
-			<i style="font-size: 2vh !important; margin-right: 1vh" class="fas fa-globe-asia"></i>
-			<span style="font-weight: 600; font-size: 2vh !important;">VI/EN</span>
+			<i
+        [ngStyle]="(heightCustom | async) ? {'font-size': (heightCustom | async) * 2 / 100 + 'px', 'margin-right': (heightCustom | async) * 1 / 100 + 'px'} : null"
+        style="font-size: 2vh; margin-right: 1vh"
+        class="fas fa-globe-asia"></i>
+			<span
+        [ngStyle]="(heightCustom | async) ? {'font-size': (heightCustom | async) * 2 / 100 + 'px'} : null"
+        style="font-weight: 600; font-size: 2vh;">VI/EN</span>
 		</span>
       </div>
       <div class="w-100"
            style="height: 22%; position: relative">
         <form class="kt-form h-100" autocomplete="off">
-          <div class="form-group m-0" style="height: 32%">
+          <div class="form-group m-0"
+               style="height: 32%">
             <div class="d-inline-flex w-100" style="position: relative">
               <img alt=""
+                   [ngStyle]="(heightCustom | async) ? {'height': (heightCustom | async) * 1.8 / 100 + 'px'
+                   , 'left': (heightCustom | async) * 2 / 100 + 'px'
+                   , 'bottom': (heightCustom | async) * 0.8 / 100 + 'px'} : null"
                    style="position: absolute; z-index: 1; height: 1.8vh; width: 1.8vh; background: #664242; left: 2vh; bottom: 0.8vh"
                    src="assets/media/books/1.png">
               <input
@@ -75,14 +92,20 @@
                 autocomplete="new-password"
                 name="username" type="text" placeholder="dfdsfsdfsdf"/>
               <img class="sb-cursor-pointer"
+                   [ngStyle]="(heightCustom | async) ? {'height': (heightCustom | async) * 1.54 / 100 + 'px'
+                   , 'right': (heightCustom | async) * 2 / 100 + 'px'
+                   , 'bottom': (heightCustom | async) * 0.8 / 100 + 'px'} : null"
                    style="position: absolute; z-index: 1; height: 1.54vh; right: 2vh; bottom: 0.8vh; width: 1.8vh; background: #664242;"
                    src="assets/media/books/1.png" alt="icon-delete">
             </div>
           </div>
 
-          <div class="form-group m-0"  style="height: 32%">
+          <div class="form-group m-0" style="height: 32%">
             <div class="d-inline-flex w-100" style="position: relative">
               <img alt=""
+                   [ngStyle]="(heightCustom | async) ? {'height': (heightCustom | async) * 1.8 / 100 + 'px'
+                   , 'left': (heightCustom | async) * 2 / 100 + 'px'
+                   , 'bottom': (heightCustom | async) * 0.8 / 100 + 'px'} : null"
                    style="position: absolute; z-index: 1; height: 1.8vh; left: 2vh; bottom: 0.8vh; width: 1.8vh; background: #664242"
                    src="assets/media/books/1.png">
 
@@ -90,19 +113,30 @@
                      id="input2"
                      name="new-password" type="password" placeholder="fgdfgdfgdfgdf dfgd"
                      autocomplete="new-password"/>
-              <i style="position: absolute; z-index: 1; height: 1.58vh; right: 4vh; bottom: 0.8vh"
-                 class="fa fa-eye text-white sb-cursor-pointer" aria-hidden="true"></i>
-              <i style="position: absolute; z-index: 1; height: 1.58vh; right: 4vh; bottom: 0.8vh"
-                 class="fa fa-eye-slash text-white sb-cursor-pointer" aria-hidden="true"
+              <i
+                [ngStyle]="(heightCustom | async) ? {'height': (heightCustom | async) * 1.58 / 100 + 'px'
+                   , 'right': (heightCustom | async) * 4 / 100 + 'px'
+                   , 'bottom': (heightCustom | async) * 0.8 / 100 + 'px'} : null"
+                style="position: absolute; z-index: 1; height: 1.58vh; right: 4vh; bottom: 0.8vh"
+                class="fa fa-eye text-white sb-cursor-pointer" aria-hidden="true"></i>
+              <i
+                [ngStyle]="(heightCustom | async) ? {'height': (heightCustom | async) * 1.58 / 100 + 'px'
+                   , 'right': (heightCustom | async) * 4 / 100 + 'px'
+                   , 'bottom': (heightCustom | async) * 0.8 / 100 + 'px'} : null"
+                style="position: absolute; z-index: 1; height: 1.58vh; right: 4vh; bottom: 0.8vh"
+                class="fa fa-eye-slash text-white sb-cursor-pointer" aria-hidden="true"
               ></i>
               <img class="sb-cursor-pointer"
+                   [ngStyle]="(heightCustom | async) ? {'height': (heightCustom | async) * 1.54 / 100 + 'px'
+                   , 'right': (heightCustom | async) * 2 / 100 + 'px'
+                   , 'bottom': (heightCustom | async) * 0.8 / 100 + 'px'} : null"
                    style="position: absolute; z-index: 1; height: 1.54vh; right: 2vh; bottom: 0.8vh; width: 1.8vh; background: #664242"
                    src="assets/media/books/1.png" alt="icon-delete">
             </div>
           </div>
 
           <!--begin::Action-->
-          <div class="text-center m-0"  style="height: 36%">
+          <div class="text-center m-0" style="height: 36%">
             <button
               class="button-login">LOGIN
             </button>
@@ -124,13 +158,16 @@
         </div>
       </div>
       <div class="w-100 text-center"
+           [ngStyle]="{}"
            style="height: 26%; background: antiquewhite">
         <img class="h-75 w-25" style="background: antiquewhite" src="assets/media/books/1.png" alt="qr-code">
       </div>
     </div>
 
   </div>
-  <div class="d-flex justify-content-center" style="max-height: 7vh; position: absolute; left: 0; width: 100%;bottom: 0; font-size: 1.5vh !important;">
+  <div class="d-flex justify-content-center"
+       [ngStyle]="{}"
+       style="max-height: 7vh; position: absolute; left: 0; width: 100%;bottom: 0; font-size: 1.5vh;">
     <div class="form-group text-center">
       <div class="text-note" style="font-size: 1.5vh;">
         Hội sở: 25 Trần Hưng Đạo, Hoàn Kiếm, Hà Nội | Điện thoại: (+84 24) 3944 8688 | Fax: (+84 24) 3944 8689
