--- a/src/app/view/home/home.component.scss
+++ b/src/app/view/home/home.component.scss
@@ -609,6 +609,11 @@
   filter: alpha(opacity=0.7);
 }
 
+.bg-login-mobile {
+  width: 100vw !important;
+  left: 0 !important;
+}
+
 .text-note {
   position: relative;
   font-family: "Arial", sans-serif;
