--- a/src/app/view/test/test.component.html
+++ b/src/app/view/test/test.component.html
@@ -1,1 +1,150 @@
-<p>test works!</p>
+<!-- <div class="sb-login-custom-form">
+	<div class="w-100 sb-login-custom-form-child"
+		 [ngStyle]="{'height': ((auth.heightBgLogin | async) * 15 / 100) + 'px'}"
+		 style="position: relative">
+		<div class="text-center w-100" style="position: absolute; bottom: 0">
+			<img alt="" [ngStyle]="{'height': getFontSize * 4.4 + 'px'}"
+				 [src]="translate.currentLang == 'vn' ? 'assets/media/logos/logo-seabank.png' : 'assets/media/logos/logo-seabank.png'">
+		</div>
+	</div>
+
+	<div class="w-100"
+		 [ngStyle]="{'height': ((auth.heightBgLogin | async) * 17 / 100) + 'px'
+		 , 'font-size': getFontSize * 1.2 + 'px'}"
+		 style="color: #ffffff; position: relative">
+		<div class="text-center"
+			 [ngStyle]="{'margin-right': (translate.currentLang == 'vn' ? getFontSize : getFontSize * 1.8) + 'px'
+		 , 'margin-left': (translate.currentLang == 'vn' ? getFontSize : getFontSize * 1.8) + 'px'}"
+			 style="position: absolute; bottom: 0">
+			<span [ngStyle]="{'font-size': getFontSize * 1.28 + 'px'}"> {{ 'AUTH.GENERAL.TITLE1' | translate }}
+				<a><img class="sb-cursor-pointer" [ngStyle]="{'height': getFontSize * 1.28 + 'px', 'padding-bottom': getFontSize / 3 + 'px'}"
+						src="assets/media/logos/logo-seanet.png" alt="logo-seanet">
+				</a> {{ 'AUTH.GENERAL.TITLE2' | translate }}
+			</span>
+		</div>
+	</div>
+	<div class="w-100 sb-login-custom-form-child"
+		 [ngStyle]="{'height': ((auth.heightBgLogin | async) * 8 / 100) + 'px'}"
+		 style="position: relative">
+		<kt-auth-notice
+			*ngIf="!(isControlHasError('username','required') || (isControlHasError('password','required')))"
+			class="sb-custom-error w-100" [ngStyle]="{'font-size': getFontSize * 0.9 + 'px'}" [isClicked]="isClickedLogin"></kt-auth-notice>
+		<mat-error class="sb-custom-error w-100"
+				   *ngIf="(isControlHasError('username','required') || (isControlHasError('password','required')))">
+			<div class="text-center w-100 shakeit">
+				<span class="text-white" [ngStyle]="{'font-size': getFontSize * 0.9 + 'px'}">{{ 'AUTH.VALIDATION.EMPTY_FIELD' | translate }}</span>
+			</div>
+		</mat-error>
+	</div>
+	<div class="w-100 text-right"
+		 [ngStyle]="{'height': ((auth.heightBgLogin | async) * 5 / 100) + 'px'}">
+		<span class="sb-login-lang" style="cursor: pointer" (click)="setLanguage()"
+		   [ngStyle]="{'margin-right': getFontSize + 'px'}">
+			<i [ngStyle]="{'font-size': getFontSize + 'px', 'margin-right': getFontSize / 2 + 'px'}" class="fas fa-globe-asia"></i>
+			<span [ngStyle]="{'font-size': getFontSize + 'px'}" style="font-weight: 600">VI/EN</span>
+		</span>
+	</div>
+	<div class="w-100 sb-login-custom-form-child"
+		 [ngStyle]="{'height': ((auth.heightBgLogin | async) * 22 / 100) + 'px'}">
+		<form class="kt-form" [formGroup]="loginForm" autocomplete="off">
+			<div class="form-group m-0" [ngStyle]="{'height': ((auth.heightBgLogin | async) * 7 / 100) + 'px'}">
+				<div class="d-inline-flex w-100" style="position: relative">
+					<img alt=""
+						[ngStyle]="{'height': getFontSize + 'px', 'left': getFontSize + 'px', 'bottom': getFontSize / 2.5 + 'px'}"
+						style="position: absolute; z-index: 1; bottom: 3px"
+						src="assets/media/logos/icon-user.png">
+					<input
+						[ngStyle]="{'font-size': getFontSize + 'px'}"
+						trimSpace [style.cursor]="loading == true ? 'no-drop' : 'default'" maxlength="50"
+						class="inp1"
+						id="input1"
+						(focusout)="focusout()"
+						(focusin)="focusin()"
+						autocomplete="new-password"
+						name="username" type="text" placeholder="{{ 'AUTH.INPUT.USERNAME' | translate }}"
+						formControlName="username"/>
+					<img *ngIf="!loginForm.controls.username.hasError('required') && loginForm.controls.username.value"
+						 [ngStyle]="{'height': getFontSize / 1.3 + 'px', 'right': getFontSize + 'px', 'bottom': getFontSize / 2.5 + 'px'}"
+						 class="sb-cursor-pointer"
+						 style="position: absolute; z-index: 1; bottom: 3px"
+						 src="assets/media/logos/logo_xoa.png" (click)="clearUser()" alt="icon-delete">
+				</div>
+			</div>
+
+			<div class="form-group m-0" [ngStyle]="{'height': ((auth.heightBgLogin | async) * 7 / 100) + 'px'}">
+				<div class="d-inline-flex w-100" style="position: relative">
+					<img alt=""
+						[ngStyle]="{'height': getFontSize + 'px', 'left': getFontSize + 'px', 'bottom': getFontSize / 2.5 + 'px'}"
+						style="position: absolute; z-index: 1"
+						src="assets/media/logos/logo_mat_khau.png">
+
+					<input trimSpace #eye [style.cursor]="loading == true ? 'no-drop' : 'default'" maxlength="32"
+						   class="inp2"
+						   id="input2"
+						   (focusout)="focusout()"
+						   (focusin)="focusin()"
+						   name="new-password" type="password" placeholder="{{ 'AUTH.INPUT.PASSWORD' | translate }}"
+						   formControlName="password"
+						   autocomplete="new-password"/>
+					<i *ngIf="!loginForm.controls.password.hasError('required') && eye.type=='text' && loginForm.controls.password.value"
+					   [ngStyle]="{'height': getFontSize / 1.3 + 'px', 'right': getFontSize * 2.2 + 'px', 'bottom': getFontSize / 2.3 + 'px'}"
+					   style="position: absolute; z-index: 1; bottom: 3px"
+					   class="fa fa-eye text-white sb-cursor-pointer" aria-hidden="true"
+					   (click)="eye.type='password'"></i>
+					<i *ngIf="!loginForm.controls.password.hasError('required') && eye.type=='password' && loginForm.controls.password.value"
+					   [ngStyle]="{'height': getFontSize / 1.3 + 'px', 'right': getFontSize * 2.2 + 'px', 'bottom': getFontSize / 2.3 + 'px'}"
+					   style="position: absolute; z-index: 1; bottom: 3px"
+					   class="fa fa-eye-slash text-white sb-cursor-pointer" aria-hidden="true"
+					   (click)="eye.type='text'"></i>
+					<img *ngIf="!loginForm.controls.password.hasError('required') && loginForm.controls.password.value"
+						 [ngStyle]="{'height': getFontSize / 1.3 + 'px', 'right': getFontSize + 'px', 'bottom': getFontSize / 2.5 + 'px'}"
+						 class="sb-cursor-pointer"
+						 style="position: absolute; z-index: 1; bottom: 3px"
+						 src="assets/media/logos/logo_xoa.png" (click)="clearPassword()" alt="icon-delete">
+				</div>
+			</div>
+
+			<!--begin::Action-->
+			<div class="text-center m-0" [ngStyle]="{'height': ((auth.heightBgLogin | async) * 8 / 100) + 'px'}">
+				<button [disabled]="loading == true" (click)="submit()"
+						[style.cursor]="loading == true ? 'no-drop' : 'pointer'"
+						class="button-login">{{ 'AUTH.LOGIN.BUTTON' | translate }}
+				</button>
+			</div>
+		</form>
+	</div>
+
+	<div class="w-100 sb-login-custom-form-child"
+		 [ngStyle]="{'height': ((auth.heightBgLogin | async) * 9 / 100) + 'px'}">
+		<div class="text-center">
+			<div class="forget-password">
+				<span class="sb-cursor-pointer" (click)="forgotPassword()">{{ 'AUTH.FORGOT.TITLE' | translate }}</span>
+			</div>
+		</div>
+		<div class="text-center">
+			<div class="sign-up-seanet">
+				<span class="sb-cursor-pointer" (click)="register()">{{ 'AUTH.REGISTER.TITLE_LOGIN' | translate }}</span>
+			</div>
+		</div>
+	</div>
+	<div class="w-100 text-center sb-login-custom-form-child"
+		 [ngStyle]="{'height': ((auth.heightBgLogin | async) * 24 / 100) + 'px'}">
+		<img class="h-75" src="assets/media/logos/QRcode.png" alt="qr-code">
+	</div>
+</div>
+
+<div class="bg-container" style="background-image: url(./assets/media/bg/background_resize_PC.png);"
+	 *ngIf="!(authService.isRegister$ | async)">
+	<div class="bg-login" [ngStyle]="{'left': (authService.isMobile | async) ? '' : '7%', 'margin': (authService.isMobile | async) ? 'auto' : ''}">
+		<router-outlet></router-outlet>
+	</div>
+	<div *ngIf="!(authService.isMobile | async)" class="d-flex justify-content-center" style="position: absolute; left: 0; width: 100%; font-size: 14px !important;" [ngStyle]="{'bottom': (authService.footer | async) + 'px'}">
+		<div class="form-group text-center">
+			<div class="text-note" [ngStyle]="{'font-size': getFontSize * 0.8 + 'px'}">
+				Hội sở: 25 Trần Hưng Đạo, Hoàn Kiếm, Hà Nội | Điện thoại: (+84 24) 3944 8688 | Fax: (+84 24) 3944 8689
+				<br/>
+				Website: http://www.seabank.com.vn | Email: contact@seabank.com.vn
+			</div>
+		</div>
+	</div>
+</div> -->
