--- a/src/app/view/home/home.component.scss
+++ b/src/app/view/home/home.component.scss
@@ -697,10 +697,11 @@
 
 @media only screen and (max-width: 575px) and (orientation: portrait) {
   .bg-login {
-    left: 0;
-    width: 100%;
-    height: 100vh;
-  }
+		left: 0;
+		width: 100%;
+		height: 100vh;
+		min-height: 1.73vw;
+	}
 }
 
 @media only screen and (orientation: portrait) {
