--- a/src/app/view/home/home.component.scss
+++ b/src/app/view/home/home.component.scss
@@ -702,6 +702,10 @@
 		height: 100vh;
 		min-height: 1.73vw;
 	}
+
+  .sb-login-custom-form {
+    min-height: 1.73vw;
+  }
 }
 
 @media only screen and (orientation: portrait) {
