--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -164,7 +164,7 @@
     </div>
 
   </div>
-  <div class="d-flex justify-content-center"
+  <div class="d-flex justify-content-center sb-text-footer"
        style="max-height: 7vh; position: absolute; left: 0; width: 100%;bottom: 0; font-size: 1.5vh;">
     <div class="form-group text-center">
       <div class="text-note" style="font-size: 1.5vh;">
